Workshop HoGent/force-app/main/default/objects/Paper__c/Paper__c.object-meta.xml
<CustomObject>
    <label>Paper</label>
    <nameField>
        <label>Paper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>