Workshop HoGent/force-app/main/default/objects/Paper__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White,</fullName>
                <default>true</default>
                <label>White,</label>
            </value>
            <value>
                <fullName>Red,</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue,</fullName>
            </value>
            <value>
                <fullName>Orange,</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>