Workshop HoGent/force-app/main/default/objects/Paper__c/fields/sheets_per_pack__c.field-meta.xml
<CustomField>
    <fullName>sheets_per_pack__c</fullName>
    <label># sheets per pack</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>